Many updates and feature additions

--- a/test.html
+++ b/test.html
@@ -16,6 +16,8 @@
     <li><a href="http://soup.pbskids.org/island/">Island</a></li>
     <li><a href="http://pbs.org/parents/">PBS Parents</a></li>
     <li><a href="http://pbs.org/parents/" title="PBS Parents">PBS Parents (with title)</a></li>
+    <li><a href="http://pbs.org/teachers/">PBS Teachers</a></li>
+    <li><a href="http://pbs.org/teachers/" title="PBS Teachers">PBS Teachers (with title)</a></li>
 </ul>
 
 <script type="text/javascript" src="http://www.google.com/jsapi?key=ABQIAAAA1LPNecY-WqkhOKcfEP82dRQmRTOt2W4c0Rjc7xKhEwEcr9i10RT4o6A3bN2PDZiZDzvkLIyfrRihpg"></script>
