--- a/test.html
+++ b/test.html
@@ -18,6 +18,8 @@
     <li><a href="http://pbs.org/parents/" title="PBS Parents">PBS Parents (with title)</a></li>
     <li><a href="http://pbs.org/teachers/">PBS Teachers</a></li>
     <li><a href="http://pbs.org/teachers/" title="PBS Teachers">PBS Teachers (with title)</a></li>
+    <li><a href="http://www.chuckecheese.com/" rel="/images/bridge/chuckecheese.gif" rev="Chuck E. Cheese is a proud sponsor of The Berenstain Bears on PBS KIDS. Chuck E. Cheese knows that quality children's programming is an important part of every child's life. That's why we're excited to bring you The Berenstain Bears." title="Chuck E. Cheese" class="pbskids_bridge_sponsor">Chuck E. Cheese (long description text)</a></li>
+    <li><a href="http://www.kodak.com/" rel="http://soup.pbskids.org/images/bridge/features/kodak.jpg" rev="Kodak is proud to sponsor PBS KIDS" title="Kodak" class="pbskids_bridge_feature">Kodak (Featured Sponsor)</a></li>
 </ul>
 
 <script type="text/javascript" src="http://www.google.com/jsapi?key=ABQIAAAA1LPNecY-WqkhOKcfEP82dRQmRTOt2W4c0Rjc7xKhEwEcr9i10RT4o6A3bN2PDZiZDzvkLIyfrRihpg"></script>
